--- a/styles/global.css
+++ b/styles/global.css
@@ -176,73 +176,53 @@ main {
 }
 
 @media (width <=768px) {
-    :root {
-        /* Font sizes */
-        --fs-h1: 3rem;
-        --fs-h2: 2.2rem;
-        --fs-h3: 1.8rem;
-        --fs-body: 1.5rem;
-
-        --lh-title: 1.15;
-        --lh-body: 1.45;
-
-        --space-section: 2.4rem;
-        --space-block: 1.6rem;
-        --space-inline: 1.2rem;
-
-        --container-padding: 1.6rem;
-
-        --input-padding: 1.4rem 1.6rem;
-        --button-padding: 1.4rem 2rem;
-
-        --radius: 1rem;
-    }
-
-    body {
-        font-size: var(--fs-body);
-        line-height: var(--lh-body);
-    }
-
     .wrapper {
         display: block;
     }
 
     aside {
-    height: 100vh;
-    width: 100vw;
+        height: 100vh;
+        width: 100vw;
 
-    background-color: var(--bg-secondary);
+        background-color: var(--bg-secondary);
 
-    padding: 2.4rem 3.2rem 3.2rem;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    text-align: center;
-
-    nav {
-        height: 50vh;
+        padding: 2.4rem 3.2rem 3.2rem;
 
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
+        justify-content: space-between;
+        text-align: center;
 
-        color: var(--text-brand);
+        nav {
+            height: 50vh;
 
-        a {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
 
-            padding: 0;
-            border: none;
-            sup {
-                color: var(--text-light);
+            color: var(--text-brand);
+
+            a {
+                font-size: 2.4rem;
+
+                padding: 0;
+                border: none;
+
+                sup {
+                    color: var(--text-light);
+                }
             }
+
+            a:hover {
+                color: inherit;
+                background: none;
+            }
+
         }
 
-        a:hover {
-            color: inherit;
-            background: none;  
+        p {
+            font-size: 1.6rem;
         }
     }
-}
 }
