--- a/styles/global.css
+++ b/styles/global.css
@@ -22,12 +22,11 @@ html {
     /* #Colors */
     --bg-primary: #E5E9F8;
     --bg-secondary: #141416;
-
+    --bg-card: hsla(183, 59%, 86%, 0.5);
 
     --text-brand: #12B2C1;
-    --text-brand-secondary: #C9A86A;
 
-    --text-title: #12B2C1;
+    --text-title: #C112B2;
     --text-light: #F6F6F6;
     --text-dark: #0E0E10;
 }
@@ -58,12 +57,6 @@ h2 {
     color: var(--text-dark);
 }
 
-h3 {
-    font-size: clamp(2rem, 3vw, 2.5rem);
-    font-weight: 600;
-    color: var(--text-title);
-}
-
 a {
     font-size: 1.6rem;
     font-weight: 500;
@@ -72,6 +65,11 @@ a {
     text-decoration: none;
 
     color: inherit;
+}
+
+ul,
+ol {
+    list-style: none;
 }
 
 .wrapper {
@@ -89,7 +87,7 @@ aside {
 
     padding: 2.4rem 3.2rem 3.2rem;
 
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-between;
 
@@ -135,47 +133,100 @@ main {
 
     margin-top: 5.8rem;
     padding: 0 2rem;
+}
 
-    header {
-        text-align: center;
+main header {
+    text-align: center;
+    margin-bottom: 3.2rem;
 
-        h2 {
-            margin-block: .8rem 5.6rem;
-        }
+    h2 {
+        margin-block: .8rem 5.6rem;
+    }
 
-        form input {
-            width: min(80%, 60rem);
+    form input {
+        width: min(80%, 60rem);
 
-            padding: .8rem 0 .8rem 1.2rem;
-            background-color: var(--bg-secondary);
+        padding: .8rem 0 .8rem 1.2rem;
+        background-color: var(--bg-secondary);
 
-            border-radius: .8rem;
-            border: none;
-            outline: none;
-            box-shadow: 0 2px 6px rgba(100, 100, 255, 0.08);
+        border-radius: .8rem;
+        border: none;
+        outline: none;
+        box-shadow: 0 2px 6px rgba(100, 100, 255, 0.08);
 
-            color: var(--text-light);
-            font-size: 1.6rem;
-            font-family: var(--font-family-body);
-            font-weight: 500;
-            letter-spacing: 0.03rem;
+        color: var(--text-light);
+        font-size: 1.6rem;
+        font-family: var(--font-family-body);
+        font-weight: 500;
+        letter-spacing: 0.03rem;
 
-            transition:
-                background-color .4s ease color .4s ease box-shadow .25s ease;
-        }
+        transition:
+            background-color .4s ease color .4s ease box-shadow .25s ease;
+    }
 
-        form input:focus {
-            box-shadow: 0 3px 10px rgba(100, 100, 255, 0.15);
-        }
+    form input:focus {
+        box-shadow: 0 3px 10px rgba(100, 100, 255, 0.15);
+    }
 
-        input[type="text"]:not(:placeholder-shown) {
-            color: var(--text-brand);
-            background-color: var(--text-dark);
-        }
+    input[type="text"]:not(:placeholder-shown) {
+        color: var(--text-brand);
+        background-color: var(--text-dark);
     }
 }
 
-@media (width <=768px) {
+main article {
+    display: flex;
+    justify-content: space-between;
+    gap: 10%;
+
+    section {
+        width: 100%;
+        background: var(--bg-card);
+        box-shadow: 2px 2px 10px var(--bg-secondary);
+
+        padding: 1.6rem 0.8rem;
+        border-radius: .8rem;
+
+        color: var(--text-dark);
+
+        h3 {
+            font-size: clamp(2rem, 3vw, 2.5rem);
+            font-weight: 600;
+            color: var(--text-title);
+        }
+    }
+
+    section:hover {
+        background-color: var(--bg-secondary);
+        box-shadow: 2px 2px 10px var(--text-title);
+
+        color: var(--text-light);
+
+        h3 {
+            color: var(--text-brand);
+        }
+
+    }
+
+    ol li {
+        width: fit-content;
+        margin-top: .8rem;
+    }
+
+    ol li:hover {
+        color: var(--text-title);
+        background: -webkit-linear-gradient(60deg, var(--text-title) 25%, var(--text-brand));
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+
+    /* .mostSearch {}
+    
+    .interestingSearch {} */
+}
+
+/* @media (width <=768px) {
     .wrapper {
         display: block;
     }
@@ -220,9 +271,9 @@ main {
             }
 
         }
-
+        
         p {
             font-size: 1.6rem;
         }
     }
-}
+} 
