--- a/styles/global.css
+++ b/styles/global.css
@@ -26,7 +26,7 @@ html {
 
     --text-brand: #12B2C1;
 
-    --text-title: #C112B2;
+    --text-title: #014950;
     --text-light: #F6F6F6;
     --text-dark: #0E0E10;
 }
@@ -87,7 +87,7 @@ aside {
 
     padding: 2.4rem 3.2rem 3.2rem;
 
-    display: none;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
 
@@ -189,6 +189,8 @@ main article {
 
         color: var(--text-dark);
 
+        transition: ease .4s;
+
         h3 {
             font-size: clamp(2rem, 3vw, 2.5rem);
             font-weight: 600;
@@ -211,6 +213,10 @@ main article {
     ol li {
         width: fit-content;
         margin-top: .8rem;
+
+        display: flex;
+        align-items: center;
+        gap: .8rem;
     }
 
     ol li:hover {
@@ -220,10 +226,7 @@ main article {
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
-
-    /* .mostSearch {}
     
-    .interestingSearch {} */
 }
 
 /* @media (width <=768px) {
